hphp/test/zend/bad/ext/reflection/tests/ReflectionObject_getConstants_error.php
<?php
class X {
}

$rc = new ReflectionObject(new X);

$rc->getConstants('X');
$rc->getConstants(true);

?>
